[package]
name = "shared-assets"
version = "3.0.0"
edition = "2024"
description = "Shared UI components, backend primitives, theme management, and middleware for UberMetroid companion apps."
license = "Apache-2.0"
repository = "https://github.com/UberMetroid/shared-assets"
readme = "README.md"

# This library is consumed by both the apps' native server binaries
# and their Yew/WASM frontends. The `backend` and `frontend` features
# split the optional dependencies so the frontend build for
# `wasm32-unknown-unknown` never pulls in `axum`/`tokio`/`mio`
# (which don't compile for that target).
#
# Usage:
#   # backend/Cargo.toml
#   shared-assets = { path = ".../shared-rust", default-features = false, features = ["backend"] }
#
#   # frontend/Cargo.toml
#   shared-assets = { path = "Assets/shared-assets/shared-rust", default-features = false, features = ["frontend"] }
[features]
default = []
# `i18n` is shared between backend and frontend and needs `serde`.
# Both feature definitions include `serde` for that reason.
backend  = ["dep:axum", "dep:ipnet", "dep:thiserror", "dep:anyhow",
            "dep:dotenvy", "dep:tower-http", "dep:http-body-util",
            "dep:tokio", "dep:tracing", "dep:serde"]
frontend = ["dep:yew", "dep:web-sys", "dep:serde"]

[dependencies]
# Backend-only dependencies (only compiled with `backend` feature).
axum = { version = "0.8", optional = true }
ipnet = { version = "2.9", optional = true }
thiserror = { version = "2.0", optional = true }
anyhow = { version = "1.0", optional = true }
dotenvy = { version = "0.15", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors", "trace"] }
http-body-util = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, features = ["signal", "net", "macros"] }
tracing = { version = "0.1", optional = true }

# Used by both backend and frontend.
serde = { version = "1.0", features = ["derive"], optional = true }
constant_time_eq = "0.3"

# Frontend-only dependencies (only compiled with `frontend` feature).
web-sys = { version = ">=0.3.98, <0.4", features = ["Window", "Document", "HtmlSelectElement", "Event"], optional = true }
yew = { version = "0.23", features = ["csr"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "time"] }
serial_test = "3"
